test/1.2/errors/T_ECONTU.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;
method init {
    foreach x in ([1,2,3]) {
        /// ERROR ECONTU
        continue;
    }
}
